--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -22,8 +22,10 @@ jobs:
 
       - name: Deploy Hugo to gh-pages
         uses: peaceiris/actions-gh-pages@v2
-        run: echo vite.work >>CNAME
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: ./public
+      - name: Create CNAME
+        run: /
+          echo vite.work >>CNAME
